2002-06-01  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Paperdoll_gump.cc: Show selected items in gumps.

2002-05-30  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc,gamewin.cc,etc:  Locate_shape() finds next/prev shape
	in world.  Semi-working.
	* combo.cc:  Added 'Find' controls.

	* mapedit/objbrowse.cc (Object_browser): Adding a common
	'create_controls()' method (partly done) for consistency.

2002-05-28  Darke <darkepaw@users.sourceforge.net>
	* conf/Configuration.*, tools/cmanip.cc: Fixed segfault in cmanip.

2002-05-27  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objiter.h (public): Iterators to get all objects recursively.

2002-05-27  Ryan Nunn  <triforce@merlin.net.au>
	* shapes/font.cc : orig_font_buf needs to be set to 0 in both Font
	  constructors.
	* actors.cc : Fixed a bug with combat and the multiracial bg hack.

2002-05-27  Dominik Reichardt <gigdr@tesionmail.de>
	* content/data/: added this dir for our custom data, like *.png files
	* Content/data/dominus00.png: added face for patch character. I'm asking
	  all other members of the team to add their picture sometime.
	* content/data/penguin00.png: Penguin statue for the church of Open Source
	* content/data/faces, shapes: scripts for ipack to build the vga files for
	  the patch dir
	* makefile.win32, makefile.cygwin: added instruction on how to handle 
	  content/data/*.* for the patch options.

2002-05-26  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/vgafile.cc (Vga_file): Constructor takes optional patch name.
	
	
	* gamewin.cc,etc: Accept ES message to reload shape files.
	* mapedit/shapelst.cc: Don't create 1st shape for flex-shape files.

2002-05-25  Simon Quinn <email@simonquinn.co.uk>
	* created "audiotest" branch to cvs for testing my new SDL_mixer/MP3 audio code.
	  You'll also need the MP3 sound pack from the Sourceforge Exult site

2002-05-24  Ryan Nunn  <triforce@merlin.net.au>
	* effects.cc : Fixing weather problem with facestats.
